# gsx-profile-manager

./: .gitignore  README.md  components.json  index.html  latest.json  package.json  pnpm-lock.yaml  splashscreen.html  vite.config.ts
.github/: auto-release.yml
.github/workflows/: auto-release.yml
public/: splashscreen.html
scripts/: bump-version.cjs  sync-version.cjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: airport_community_scanner.rs  create_profile_symlink.rs  db.rs  is_admin.rs  main.rs  zip_handler.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/app_state/: commands.rs
src-tauri/src/modules/file_system/: commands.rs  helpers.rs
src-tauri/src/modules/profile_manager/: commands.rs  helpers.rs  mod.rs
src-tauri/src/modules/types/: app_state.rs  mod.rs  tree_data.rs
src-tauri/src/modules/user_folders/: commands.rs  helpers.rs
src-tauri/src/profile_manager/: commands.rs  db.rs
src/components/: ActionBar.tsx  DebugPanel.tsx  DropDownUser.tsx  FolderToolbar.tsx  FolderView.tsx  Folders.tsx  GsxProfileUploader.tsx  Header.tsx  SelectedFolders.tsx  SetupScreen.tsx  TableDemo.tsx  UserFoldersToolbar.tsx  UserFoldersView.tsx
src/context/: AppContext.tsx  Database.tsx  Database.types.tsx
src/css/: App.css  FolderTree.css
src/lib/: constants.tsx  db.tsx  fileSystem.tsx  utils.ts
src/store/: useGsxProfileStore.ts  useUserProfileStore.ts
src/types/: ProfileRow.ts  common.ts  gsx-profile.ts  treeTypes.tsx  userProfile.ts
(+33 files in other folders)
